# proof-transport

./: Cargo.toml  LICENSE  PITCH.md  README
.github/workflows/: ci.yml
docs/: architecture.md  index.html  worked-example.md
docs/data/: proof_cut_eliminated.json  proof_cut_eliminated_2.json  proof_with_cut.json  proof_with_cut_2.json
examples/: R.json  or_proof_with_cut.json  proof_cut_chain.json  proof_cut_eliminated.json  proof_cut_free.json  proof_cut_pair.json  proof_fo_quantifiers.json  proof_with_cut.json  proof_with_unreachable.json  prop_cut_in.json  prop_cut_out.json
examples/golden/: 01_cut.in.json  01_cut.out.json
schemas/: proof.schema.json  registry.schema.json
src/: LICENSE  README.md  ast.rs  cutelim.rs  frag.rs  lib.rs  main.rs  registry.rs  transport.rs  validator.rs
tests/: cutelim.rs  examples.rs  fragility.rs  golden.rs  golden_harness.rs  invariants.rs  json_examples.rs  registry.rs  smoke.rs  success.rs  support.rs  transport_invariants.rs
