[package]
name = "proof-transport"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sequentlabs/proof-transport"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
json5 = "0.4"
